--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ body {
 }
 
 h1 {
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
   font-family: 'Roboto', sans-serif;
   font-size: 36px;
   color: #000000;
